--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<nav>
-		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#/pagina1">Página 01</a></li>
-			<li><a href="#/pagina2">Página 02</a></li>
+	<nav class="menu">
+		<ul class="menu-list">
+			<li class="menu-list-item"><a href="#">Home</a></li>
+			<li class="menu-list-item"><a href="#/pagina1">Página 01</a></li>
+			<li class="menu-list-item"><a href="#/pagina2">Página 02</a></li>
 		</ul>
 	</nav>
 
@@ -27,7 +27,6 @@
 
 	<script src="./libs/navigo.min.js"></script>
 	<script src="https://sense-demo.qlik.com/resources/assets/external/requirejs/require.js"></script>
-	<!-- <script src="js/controllers.js"></script> -->
 	<script type="module" src="js/app.js"></script>
 </body>
 </html>
